# nu-plugin-highlight

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  rustfmt.toml
src/: highlight.rs  main.rs  plugin.rs  terminal.rs  theme.rs
syntaxes/patches/: nushell.sublime-syntax.patch
