[package]
name = "nu_plugin_highlight"
version = "1.3.1+0.98.0"
authors = ["Tim 'Piepmatz' Hesse"]
edition = "2021"
repository = "https://github.com/cptpiepmatz/nu-plugin-highlight"
description = "A nushell plugin for syntax highlighting"
license = "MIT"
keywords = ["nu", "plugin", "syntax", "highlighting"]
categories = ["command-line-utilities", "development-tools", "value-formatting"]

[dependencies]
# nu
nu-plugin = "0.98.0"
nu-protocol = "0.98.0"
nu-path = "0.98.0"

# highlighting
syntect = "5"
nu-ansi-term = "0.50"
ansi_colours = "1"
bat = { version = "0.24", default-features = false }

# guess the type
mime_guess = "2"
