[package]
name = "nu_plugin_highlight"
version = "1.4.10+0.108.0"
authors = ["Tim 'Piepmatz' Hesse"]
edition = "2021"
repository = "https://github.com/cptpiepmatz/nu-plugin-highlight"
description = "A nushell plugin for syntax highlighting"
license = "MIT"
keywords = ["nu", "plugin", "syntax", "highlighting"]
categories = ["command-line-utilities", "development-tools", "value-formatting"]

[workspace.dependencies]
# share dependencies with build dependencies
syntect = "5"
bat = { version = "0.24", default-features = false }

[dependencies]
# nu
nu-plugin = "0.108.0"
nu-protocol = { version = "0.108.0", features = ["sqlite"] } # remove feature in next release
nu-path = "0.108.0"

# highlighting
syntect = { workspace = true }
nu-ansi-term = "0.50"
ansi_colours = "1"
bat = { workspace = true }

# guess the type
mime_guess = "2"

[build-dependencies]
patch-apply = "0.8.3"
syntect = { workspace = true }
bat = { workspace = true }
